Fix scrolling bug on mobile

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -58,6 +58,10 @@ body {
 }
 
 @media only screen and (max-width: 650px) {
+  body {
+    height: 100vh;
+  }
+
   .container {
     max-width: 93%;
   }
